--- a/index.html
+++ b/index.html
@@ -63,88 +63,109 @@
           <a class="about-link" href="#">LEARN MORE</a>
         </div>
       </section>
-      <section>
-        <ul>
-          <li>
-            <h3>Qualified Employees</h3>
-            <p>
+      <section class="features">
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-title">Employees</h3>
+            <p class="features-text">
               Our team consists of more than 20 qualified and experienced
               accountants, marketers, and managers.
             </p>
           </li>
-          <li>
-            <h3>Free Consultations</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Free Consultations</h3>
+            <p class="features-text">
               Our acquaintance with a client always begins with a free
               consultation to find out possible solutions to their problems.
             </p>
           </li>
-          <li>
-            <h3>100% Guaranteed</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">100% Guaranteed</h3>
+            <p class="features-text">
               All results that you get from us are 100% guaranteed to bring you
               to a whole new level of profitability and financial success.
             </p>
           </li>
-          <li>
-            <h3>100% Guaranteed</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">100% Guaranteed</h3>
+            <p class="features-text">
               All results that you get from us are 100% guaranteed to bring you
               to a whole new level of profitability and financial success.
             </p>
           </li>
         </ul>
-        <div>
-          <img src="./src/img/black_dog.png" alt="Black dog" />
+        <div class="features-photo">
+          <img
+            class="features-img"
+            src="./src/img/black_dog.png"
+            alt="Black dog"
+          />
         </div>
       </section>
-      <section>
-        <hgroup>
-          <h2>Services</h2>
-          <p>
+      <section class="services">
+        <hgroup class="services-heading">
+          <h2 class="services-title">Services</h2>
+          <p class="services-text">
             We offer a variety of grooming services for dogs of all breeds and
             ages. We use only high- quality products that suit the needs of your
             pet. Discover our most popular services below.
           </p>
         </hgroup>
-        <ul>
-          <li>
-            <div>
-              <img src="./src/img/services/styling.jpg" alt="Styling" />
-            </div>
-            <h3>Styling</h3>
-          </li>
-          <li>
-            <div>
-              <img src="./src/img/services/grooming.jpg" alt="Full Grooming" />
-            </div>
-            <h3>Full Grooming</h3>
-          </li>
-          <li>
-            <div>
+        <ul class="services-list">
+          <li class="services-item">
+            <div class="services-photo">
               <img
+                class="sevices-img"
+                src="./src/img/services/styling.jpg"
+                alt="Styling"
+              />
+            </div>
+            <h3 class="services-name">Styling</h3>
+          </li>
+          <li class="services-item">
+            <div class="services-photo">
+              <img
+                class="sevices-img"
+                src="./src/img/services/grooming.jpg"
+                alt="Full Grooming"
+              />
+            </div>
+            <h3 class="services-name">Full Grooming</h3>
+          </li>
+          <li class="services-item">
+            <div class="services-photo">
+              <img
+                class="sevices-img"
                 src="./src/img/services/bath-tydy.jpg"
                 alt="Bath & Tidy Up"
               />
             </div>
-            <h3>Bath & Tidy Up</h3>
+            <h3 class="services-name">Bath & Tidy Up</h3>
           </li>
-          <li>
-            <div>
-              <img src="./src/img/services/bath.jpg" alt="Deluxe Bath" />
+          <li class="services-item">
+            <div class="services-photo">
+              <img
+                class="sevices-img"
+                src="./src/img/services/bath.jpg"
+                alt="Deluxe Bath"
+              />
             </div>
-            <h3>Deluxe Bath</h3>
+            <h3 class="services-name">Deluxe Bath</h3>
           </li>
         </ul>
-        <button type="button">VIEW ALL SERVICES</button>
+        <button class="services-button" type="button">VIEW ALL SERVICES</button>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">
-        <img src="./src/img/logo.png" alt="Logo SpaDog" />
-        Spa<span>Dog</span>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html">
+        <img
+          class="footer-logo-image"
+          src="./src/img/logo.png"
+          alt="Logo SpaDog"
+        />
+        Spa<span class="footer-logo-part">Dog</span>
       </a>
-      <p>© 2023 All Rights Reserved. Privacy Policy</p>
+      <p class="policy">© 2023 All Rights Reserved. Privacy Policy</p>
     </footer>
   </body>
 </html>
