--- a/index.html
+++ b/index.html
@@ -22,158 +22,174 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav">
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">FEATURES</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">SERVICES</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">PORTFOLIO</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">PAGES</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">FEATURES</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">SERVICES</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">PORTFOLIO</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">PAGES</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="main">
       <section class="hero">
-        <div class="hero-content">
-          <h1 class="hero-title">
-            Make your dogs <span class="hero-title-part">Look their best</span>
-          </h1>
-          <button class="hero-button" type="button">FREE CONSULTATION</button>
-        </div>
-        <div class="photo">
-          <img
-            class="image"
-            src="./src/img/hero-dog.jpg"
-            alt="black and white dog"
-          />
+        <div class="container">
+          <div class="hero-content">
+            <h1 class="hero-title">
+              Make your dogs
+              <span class="hero-title-part">Look their best</span>
+            </h1>
+            <button class="hero-button" type="button">FREE CONSULTATION</button>
+          </div>
+          <div class="photo">
+            <img
+              class="image"
+              src="./src/img/hero-dog.jpg"
+              alt="black and white dog"
+            />
+          </div>
         </div>
       </section>
       <section class="about">
-        <div class="about-photo">
-          <img
-            class="about-img"
-            src="./src/img/goldendog.png"
-            alt="Golden Dog"
-          />
-        </div>
-        <div class="about-content">
-          <h2 class="about-title">A Few Words About Us</h2>
-          <p class="about-text">
-            SpaDog is a pet salon established in 1999 with the main goal of
-            giving your pets the full furry body treatment so that they can look
-            their very best every day.
-          </p>
-          <p class="about-text">
-            Our salon offers a complete line of fine grooming services to bring
-            out the best of appearance and personality in your pet Our groomers
-            work carefully, never rush, and do not overbook appointments.
-          </p>
-          <a class="about-link" href="#">LEARN MORE</a>
+        <div class="container">
+          <div class="about-photo">
+            <img
+              class="about-img"
+              src="./src/img/goldendog.png"
+              alt="Golden Dog"
+            />
+          </div>
+          <div class="  ">
+            <h2 class="about-title">A Few Words About Us</h2>
+            <p class="about-text">
+              SpaDog is a pet salon established in 1999 with the main goal of
+              giving your pets the full furry body treatment so that they can
+              look their very best every day.
+            </p>
+            <p class="about-text">
+              Our salon offers a complete line of fine grooming services to
+              bring out the best of appearance and personality in your pet Our
+              groomers work carefully, never rush, and do not overbook
+              appointments.
+            </p>
+            <a class="about-link" href="#">LEARN MORE</a>
+          </div>
         </div>
       </section>
       <section class="features">
-        <ul class="features-list">
-          <li class="features-item">
-            <h3 class="features-title">Employees</h3>
-            <p class="features-text">
-              Our team consists of more than 20 qualified and experienced
-              accountants, marketers, and managers.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">Free Consultations</h3>
-            <p class="features-text">
-              Our acquaintance with a client always begins with a free
-              consultation to find out possible solutions to their problems.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">100% Guaranteed</h3>
-            <p class="features-text">
-              All results that you get from us are 100% guaranteed to bring you
-              to a whole new level of profitability and financial success.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">100% Guaranteed</h3>
-            <p class="features-text">
-              All results that you get from us are 100% guaranteed to bring you
-              to a whole new level of profitability and financial success.
-            </p>
-          </li>
-        </ul>
-        <div class="features-photo">
-          <img
-            class="features-img"
-            src="./src/img/black_dog.png"
-            alt="Black dog"
-          />
+        <div class="container">
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-title">Qualified Employees</h3>
+              <p class="features-text">
+                Our team consists of more than 20 qualified and experienced
+                accountants, marketers, and managers.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Free Consultations</h3>
+              <p class="features-text">
+                Our acquaintance with a client always begins with a free
+                consultation to find out possible solutions to their problems.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">100% Guaranteed</h3>
+              <p class="features-text">
+                All results that you get from us are 100% guaranteed to bring
+                you to a whole new level of profitability and financial success.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">100% Guaranteed</h3>
+              <p class="features-text">
+                All results that you get from us are 100% guaranteed to bring
+                you to a whole new level of profitability and financial success.
+              </p>
+            </li>
+          </ul>
+          <div class="features-photo">
+            <img
+              class="features-img"
+              src="./src/img/black_dog.png"
+              alt="Black dog"
+            />
+          </div>
         </div>
       </section>
       <section class="services">
-        <hgroup class="services-heading">
-          <h2 class="services-title">Services</h2>
-          <p class="services-text">
-            We offer a variety of grooming services for dogs of all breeds and
-            ages. We use only high- quality products that suit the needs of your
-            pet. Discover our most popular services below.
-          </p>
-        </hgroup>
-        <ul class="services-list">
-          <li class="services-item">
-            <div class="services-photo">
-              <img
-                class="sevices-img"
-                src="./src/img/services/styling.jpg"
-                alt="Styling"
-              />
-            </div>
-            <h3 class="services-name">Styling</h3>
-          </li>
-          <li class="services-item">
-            <div class="services-photo">
-              <img
-                class="sevices-img"
-                src="./src/img/services/grooming.jpg"
-                alt="Full Grooming"
-              />
-            </div>
-            <h3 class="services-name">Full Grooming</h3>
-          </li>
-          <li class="services-item">
-            <div class="services-photo">
-              <img
-                class="sevices-img"
-                src="./src/img/services/bath-tydy.jpg"
-                alt="Bath & Tidy Up"
-              />
-            </div>
-            <h3 class="services-name">Bath & Tidy Up</h3>
-          </li>
-          <li class="services-item">
-            <div class="services-photo">
-              <img
-                class="sevices-img"
-                src="./src/img/services/bath.jpg"
-                alt="Deluxe Bath"
-              />
-            </div>
-            <h3 class="services-name">Deluxe Bath</h3>
-          </li>
-        </ul>
-        <button class="services-button" type="button">VIEW ALL SERVICES</button>
+        <div class="container">
+          <hgroup class="services-heading">
+            <h2 class="services-title">Services</h2>
+            <p class="services-text">
+              We offer a variety of grooming services for dogs of all breeds and
+              ages. We use only high- quality products that suit the needs of
+              your pet. Discover our most popular services below.
+            </p>
+          </hgroup>
+          <ul class="services-list">
+            <li class="services-item">
+              <div class="services-photo">
+                <img
+                  class="sevices-img"
+                  src="./src/img/services/styling.jpg"
+                  alt="Styling"
+                />
+              </div>
+              <h3 class="services-name">Styling</h3>
+            </li>
+            <li class="services-item">
+              <div class="services-photo">
+                <img
+                  class="sevices-img"
+                  src="./src/img/services/grooming.jpg"
+                  alt="Full Grooming"
+                />
+              </div>
+              <h3 class="services-name">Full Grooming</h3>
+            </li>
+            <li class="services-item">
+              <div class="services-photo">
+                <img
+                  class="sevices-img"
+                  src="./src/img/services/bath-tydy.jpg"
+                  alt="Bath & Tidy Up"
+                />
+              </div>
+              <h3 class="services-name">Bath & Tidy Up</h3>
+            </li>
+            <li class="services-item">
+              <div class="services-photo">
+                <img
+                  class="sevices-img"
+                  src="./src/img/services/bath.jpg"
+                  alt="Deluxe Bath"
+                />
+              </div>
+              <h3 class="services-name">Deluxe Bath</h3>
+            </li>
+          </ul>
+          <button class="services-button" type="button">
+            VIEW ALL SERVICES
+          </button>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html">
-        <img
-          class="footer-logo-image"
-          src="./src/img/logo.png"
-          alt="Logo SpaDog"
-        />
-        Spa<span class="footer-logo-part">Dog</span>
-      </a>
-      <p class="policy">© 2023 All Rights Reserved. Privacy Policy</p>
+      <div class="container">
+        <a class="footer-logo" href="./index.html">
+          <img
+            class="footer-logo-image"
+            src="./src/img/logo.png"
+            alt="Logo SpaDog"
+          />
+          Spa<span class="footer-logo-part">Dog</span>
+        </a>
+        <p class="policy">© 2023 All Rights Reserved. Privacy Policy</p>
+      </div>
     </footer>
   </body>
 </html>
