--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               alt="Golden Dog"
             />
           </div>
-          <div class="  ">
+          <div class="about-content">
             <h2 class="about-title">A Few Words About Us</h2>
             <p class="about-text">
               SpaDog is a pet salon established in 1999 with the main goal of
