--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <main class="main">
       <section class="hero">
-        <div class="container">
+        <div class="container hero-container">
           <div class="hero-content">
             <h1 class="hero-title">
               Make your dogs
@@ -46,7 +46,7 @@
           </div>
           <div class="photo">
             <img
-              class="image"
+              class="hero-image"
               src="./src/img/hero-dog.jpg"
               alt="black and white dog"
             />
