--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </section>
       <section class="about">
-        <div class="container">
+        <div class="container about-container">
           <div class="about-photo">
             <img
               class="about-img"
@@ -80,7 +80,7 @@
         </div>
       </section>
       <section class="features">
-        <div class="container">
+        <div class="container features-container">
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-title">Qualified Employees</h3>
@@ -121,7 +121,7 @@
         </div>
       </section>
       <section class="services">
-        <div class="container">
+        <div class="container services-container">
           <hgroup class="services-heading">
             <h2 class="services-title">Services</h2>
             <p class="services-text">
@@ -179,7 +179,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <a class="footer-logo" href="./index.html">
           <img
             class="footer-logo-image"
